--- a/docs/fr/modules/Fonctionnement.tex
+++ b/docs/fr/modules/Fonctionnement.tex
@@ -38,7 +38,9 @@
  \color{red}
  \section{Introduction}\color{white}
 
-  \color{green}
+ \textbf{Note :} La procédure d'initialisation des modules et de la librairie est décrite en détails dans la sous-section \textbf{\color{red}Fonctionnement \color{white} / \color{green}Étapes d'initialisation\color{white}} du fichier \textbf{\color{lime}Bash-utils/docs/fr/Introduction.pdf\color{white}}.
+
+ \color{green}
   \subsection{Présentation générale}\color{white}
   Ici, un module est un regroupement de fichiers source et de fichiers de configurations développé pour la librairie Bash Utils, dont le but est de faciliter le développement d'un script Bash selon une certaine catégorie.\linebreak
 
@@ -80,6 +82,10 @@
   Outre les fichiers de configuration et les fichiers source de chaque module, plusieurs fichiers sont présents directement dans le dossier \textbf{\color{lime}.Bash-utils\color{white}} :\linebreak
 
   - \textbf{\color{lime}Bash-utils-root-val.path\color{white} :} Ce fichier contient le chemin du dossier racine de la librairie Bash Utils. Il est lu par le fichier \textbf{\color{lime}module.conf\color{white}}, du module \color{lime}\textbf{main\color{white}}.
+
+
+
+  \color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
  \color{red}
  \section{Liste des modules officiels}\color{white}
