Updating the French documentation

--- a/docs/fr/Introduction.tex
+++ b/docs/fr/Introduction.tex
@@ -231,7 +231,7 @@ Tous les fichiers de documentation en français concernant la description des fo
 \subsection{Variables}\color{white}
 Tous les fichiers de documentation en français concernant la description des variables se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/variables}\color{white}.\\[1\baselineskip]
 
-Par ailleurs, \\[1\baselineskip]
+Par ailleurs, dans les fichiers de documentation des fonctions, j'ai représenté \\[1\baselineskip]
 
 \color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
