--- a/docs/fr/modules/Fonctionnement.tex
+++ b/docs/fr/modules/Fonctionnement.tex
@@ -48,7 +48,11 @@
 
   Pour un fonctionnement optimal, il est fortement recommandé de l'installer dans le dossier personnel de tous les utilisateurs d'un ordinateur susceptibles d'utiliser cette librairie.\linebreak
 
-  En outre, il est obligatoire de l'installer dans le dossier personnel du super-utilisateur (le dossier \textbf{\color{lime}/root\color{white}}), pour pouvoir exécuter un script utilisant la librairie Bash Utils avec les privilèges du super-utilisateur, ainsi que pour utiliser certaines fonctionnalités ne pouvant être exécutées qu'avec des privilèges du super-utilisateur.
+  En outre, il est obligatoire de l'installer dans le dossier personnel du super-utilisateur (le dossier \textbf{\color{lime}/root\color{white}}), pour pouvoir exécuter un script utilisant la librairie Bash Utils avec les privilèges du super-utilisateur, ainsi que pour utiliser certaines fonctionnalités ne pouvant être exécutées qu'avec des privilèges du super-utilisateur.\\[1\baselineskip]
+
+
+
+  \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
   \color{green}
   \subsection{Dossiers}\color{white}
@@ -58,18 +62,30 @@
 
   Le dossier \textbf{\color{lime}config\color{white}} est constitué du dossier \textbf{\color{lime}modules\color{white}}, qui contient en sous-dossiers des dossiers de modules contenant les fichiers de configuration propres à chaque module.\linebreak
 
-  Le dossier \textbf{\color{lime}modules\color{white}} (sous-dossier de \textbf{\color{lime}.Bash-utils\color{white}}) contient en sous-dossier des dossiers de modules contenant les fichiers d'initialisation propres à chaque module.
+  Le dossier \textbf{\color{lime}modules\color{white}} (sous-dossier de \textbf{\color{lime}.Bash-utils\color{white}}) contient en sous-dossier des dossiers de modules contenant les fichiers d'initialisation propres à chaque module.\\[1\baselineskip]
+
+
+
+  \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
   \color{green}
-
   \subsection{Architecture}\color{white}
 
   \color{blue}
   \subsubsection{Dossiers}\color{white}
+
+
+
+  \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
   
   \color{blue}
   \subsubsection{Fichiers}\color{white}
 
+
+
+  \color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
+  \color{green}
   \subsection{Fichiers}\color{white}
   Ce gestionnaire est composé d'un fichier à placer dans le dossier personnel de tous les utilisateurs de la librairie :  \textbf{\color{lime}Bash-utils-init.sh\color{white}}.\linebreak
 
@@ -81,7 +97,7 @@
 
   Outre les fichiers de configuration et les fichiers source de chaque module, plusieurs fichiers sont présents directement dans le dossier \textbf{\color{lime}.Bash-utils\color{white}} :\linebreak
 
-  - \textbf{\color{lime}Bash-utils-root-val.path\color{white} :} Ce fichier contient le chemin du dossier racine de la librairie Bash Utils. Il est lu par le fichier \textbf{\color{lime}module.conf\color{white}}, du module \color{lime}\textbf{main\color{white}}.
+  - \textbf{\color{lime}Bash-utils-root-val.path\color{white} :} Ce fichier contient le chemin du dossier racine de la librairie Bash Utils. Il est lu par le fichier \textbf{\color{lime}module.conf\color{white}}, du module \color{lime}\textbf{main\color{white}}.\\[1\baselineskip]
 
 
 
