--- a/docs/fr/Introduction.tex
+++ b/docs/fr/Introduction.tex
@@ -231,7 +231,14 @@ Tous les fichiers de documentation en français concernant la description des fo
 \subsection{Variables}\color{white}
 Tous les fichiers de documentation en français concernant la description des variables se situent dans le dossier \color{lime}\textbf{docs/fr/Bash/variables}\color{white}.\\[1\baselineskip]
 
-Par ailleurs, dans les fichiers de documentation des fonctions, j'ai représenté \\[1\baselineskip]
+Par ailleurs, dans les fichiers de documentation des fonctions, j'ai, respectivement, représenté le chemin absolu des dossiers du gestionnaire de module et de la librairie ainsi :
+\begin{itemize}
+     \item \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{white} :} Cette variable globale enregistre le chemin du dossier racine de la librairie Bash Utils, celui qui contient toutes les documentation, les fichiers sources et des fichiers de ressources.\\[1\baselineskip]
+     \item \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{white} :} Cette variable globale enregistre le chemin du dossier racine des modules la librairie Bash Utils, celui qui est installé dans le dossier personnel de chaque\linebreak utilisateur, et qui contient tous les fichiers de configuration et d'initialisation de chaque module.\\[1\baselineskip]
+\end{itemize}
+
+La première variable est définie dans le fichier \textbf{\color{lime}\$HOME/Bash-utils-init.sh\color{white}}, tandis que la seconde variable est définie dans le fichier \textbf{\color{lime}\$HOME/.Bash-utils/config/modules/main/module.conf\color{white}}.\\[1\baselineskip]
+
 
 \color{red}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
