--- a/docs/fr/modules/main/functions/Headers.tex
+++ b/docs/fr/modules/main/functions/Headers.tex
@@ -50,31 +50,28 @@ Ce fichier source inclut des fonctions servant à la création de headers, sépa
 \color{blue}
 \subsubsection{Chemins de fichiers}\color{white}
 \textbf{Nom du fichier :} \textbf{\color{lime}Checkings.lib\color{white}}\\[1\baselineskip]
-\textbf{Dossier parent :} \textbf{\color{lime}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH/lib/functions/main\color{white}*}\\[1\baselineskip]
-
-\textbf{*} : Voir la variable \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{white}} dans la sous-sous-catégorie \textbf{\color{blue}Variables\color{white}}.\\[1\baselineskip]
+\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{lime}/lib/functions/main\color{white}}\\[1\baselineskip]
 
 
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 \textbf{Nom du fichier :} \textbf{\color{lime}Colors.conf\color{white}}\\[1\baselineskip]
-\textbf{Dossier parent :} \textbf{\color{lime}\$\_\_BU\_MODULE\_UTILS\_ROOT/config/modules/main\color{white}*}\\[1\baselineskip]
+\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
 
-\textbf{*} : Voir la variable \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{white}} dans la sous-sous-catégorie \textbf{\color{blue}Variables\color{white}}.\\[1\baselineskip]
 
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 \textbf{Nom du fichier :} \textbf{\color{lime}Status.conf\color{white}}\\[1\baselineskip]
-\textbf{Dossier parent :} \textbf{\color{lime}\$\_\_BU\_MODULE\_UTILS\_ROOT/config/modules/main\color{white}}\\[1\baselineskip]
+\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
 
 
 
 \color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 \textbf{Nom du fichier :} \textbf{\color{lime}Text.conf\color{white}}\\[1\baselineskip]
-\textbf{Dossier parent :} \textbf{\color{lime}\$\_\_BU\_MODULE\_UTILS\_ROOT/config/modules/main\color{white}}\\[1\baselineskip]
+\textbf{Dossier parent :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{lime}/config/modules/main\color{white}}\\[1\baselineskip]
 
 
 
@@ -100,26 +97,6 @@ Ce fichier source inclut des fonctions servant à la création de headers, sépa
 \textbf{Description :} Chacune des variables globales commençant par ce nom retourne un code couleu encodé lors de l'appel d'une de ces variables, grâce à l'appel simultané d'une fonction.\\[1\baselineskip]
 
 \textbf{Fichier de définition :} \textbf{\color{lime}Colors.conf\color{white}}\\[1\baselineskip]
-
-
-
-\color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
-
-\textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{white}}\\[1\baselineskip]
-
-\textbf{Description :} Cette variable globale enregistre le chemin du dossier racine de la librairie Bash Utils, celui qui contient toutes les documentation, les fichiers sources et des fichiers de ressources.\\[1\baselineskip]
-
-\textbf{Fichier de définition :} \textbf{\color{lime}module.conf\color{white}}\\[1\baselineskip]
-
-
-
-\color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
-
-\textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{white}}\\[1\baselineskip]
-
-\textbf{Description :} Cette variable globale enregistre le chemin du dossier racine des modules la librairie Bash Utils, celui qui contient tous les fichiers de configuration et d'initialisation de chaque module.\\[1\baselineskip]
-
-\textbf{Fichier de définition :} \textbf{\color{lime}module.conf\color{white}}\\[1\baselineskip]
 
 
 
