--- a/docs/fr/modules/main/functions/Permissions.tex
+++ b/docs/fr/modules/main/functions/Permissions.tex
@@ -44,20 +44,20 @@
 \subsection{Présentation}\color{white}
 Ce fichier source inclut des fonctions servant à la gestion d'erreurs.\\[1\baselineskip]
 
+
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
 \color{green}
 \subsection{Définitions des éléments mentionnés}\color{white}
 
 \color{blue}
 \subsubsection{Chemins de fichiers}\color{white}
-\textbf{Nom du fichier :} \textbf{\color{lime}\color{white}}\\[1\baselineskip]
-\textbf{Dossier parent :} \textbf{\color{lime}\color{white}*}\\[1\baselineskip]
-
-\textbf{*} : Voir la variable \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH/lib/functions/main\color{white}} dans la sous-sous-catégorie\linebreak \textbf{\color{blue}Variables\color{white}}.\\[1\baselineskip]
+\textbf{Dossier parent :} \textbf{\color{lime}\color{white}}\\[1\baselineskip]
 
 
 
-\color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
-
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
 \subsubsection{Fonctions}\color{white}
