--- a/docs/fr/modules/main/functions/Text.tex
+++ b/docs/fr/modules/main/functions/Text.tex
@@ -42,7 +42,7 @@
 
 \color{green}
 \subsection{Présentation}\color{white}
-Ce fichier source inclut des fonctions servant à la gestion d'erreurs.\\[1\baselineskip]
+Ce fichier source inclut des fonctions servant à la manipulation de chaînes de caractères.\\[1\baselineskip]
 
 \color{green}
 \subsection{Définitions des éléments mentionnés}\color{white}
@@ -56,7 +56,7 @@ Ce fichier source inclut des fonctions servant à la gestion d'erreurs.\\[1\base
 
 
 
-\color{lime}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
+\color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 
 \color{blue}
@@ -80,7 +80,7 @@ Ce fichier source inclut des fonctions servant à la gestion d'erreurs.\\[1\base
 
 
 
-\par\noindent\rule{\textwidth}{0.4pt}\\[1\baselineskip]
+\color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
 
 \textbf{Variable :} \textbf{\color{orange}\color{white}}\\[1\baselineskip]
 
