--- a/docs/fr/modules/main/functions/Text.tex
+++ b/docs/fr/modules/main/functions/Text.tex
@@ -70,7 +70,7 @@ Ce fichier source inclut des fonctions servant à la manipulation de chaînes de
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{Variables}\color{white}
+\subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{white}
 \textbf{Variable :} \textbf{\color{orange}\color{white}}\\[1\baselineskip]
 
 \textbf{Description :} .\\[1\baselineskip]
