--- a/docs/fr/modules/main/functions/Lang.tex
+++ b/docs/fr/modules/main/functions/Lang.tex
@@ -71,29 +71,7 @@ Ce fichier source inclut des fonctions servant à la gestion d'erreurs.\\[1\base
 \color{blue}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{blue}
-\subsubsection{Variables globales et/ou d'environnement appelées}\color{white}
-
-\textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_ROOT\_DIR\_PATH\color{white}}\\[1\baselineskip]
-
-\textbf{Description :} Cette variable globale enregistre le chemin du dossier racine de la librairie Bash Utils, celui qui contient toutes les documentation, les fichiers sources et des fichiers de ressources.\\[1\baselineskip]
-
-\textbf{Fichier de définition :} \textbf{\color{lime}module.conf\color{white}}\\[1\baselineskip]
-
-
-
-\color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
-
-\textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MODULE\_UTILS\_ROOT\color{white}}\\[1\baselineskip]
-
-\textbf{Description :} Cette variable globale enregistre le chemin du dossier racine des modules la librairie Bash Utils, celui qui contient tous les fichiers de configuration et d'initialisation de chaque module.\\[1\baselineskip]
-
-\textbf{Fichier de définition :} \textbf{\color{lime}module.conf\color{white}}\\[1\baselineskip]
-
-
-
-
-\color{orange}\par\noindent\rule{\textwidth}{0.4pt}\color{white}\\[1\baselineskip]
-
+\subsubsection{Variables globales externes et / ou variables d'environnement appelées}\color{white}
 \textbf{Variable :} \textbf{\color{orange}\$\_\_BU\_MAIN\_STAT\_TRANSLATED\color{white}}\\[1\baselineskip]
 
 \textbf{Description :} Cette variable globale sert à déterminer si le script a été traduit via le parseur de fichiers CSV.\\[1\baselineskip]
