--- a/docs/fr/modules/main/functions/CheckSTAT.tex
+++ b/docs/fr/modules/main/functions/CheckSTAT.tex
@@ -158,6 +158,10 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
     \textbf{Code :}\\
 \end{flushleft}
 
+
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
 \color{green}
 \subsection{CheckSTAT\_DEBUG}\color{white}
 \begin{itemize}
@@ -179,6 +183,10 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 
     \item \textbf{Code :}
 \end{itemize}
+
+
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{CheckSTAT\_ERROR}\color{white}
@@ -202,6 +210,10 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
     \item \textbf{Code :}
 \end{itemize}
 
+
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
 \color{green}
 \subsection{CheckSTAT\_EXIT\_CODE}\color{white}
 \begin{itemize}
@@ -217,6 +229,10 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 
     \item \textbf{Code :}
 \end{itemize}
+
+
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{CheckSTAT\_LOG}\color{white}
@@ -234,6 +250,10 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
     \item \textbf{Code :}
 \end{itemize}
 
+
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
 \color{green}
 \subsection{CheckSTAT\_LOG\_REDIRECT}\color{white}
 \begin{itemize}
@@ -249,6 +269,10 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 
     \item \textbf{Code :}
 \end{itemize}
+
+
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{CheckSTAT\_TIME\_TXT}\color{white}
@@ -266,6 +290,9 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
     \item \textbf{Code :}
 \end{itemize}
 
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
+
 \color{green}
 \subsection{CheckSTAT\_USER\_OS}\color{white}
 \begin{itemize}
@@ -281,6 +308,10 @@ Ce fichier source inclut des fonctions servant à la gestion des valeurs des var
 
     \item \textbf{Code :}
 \end{itemize}
+
+
+
+\color{green}\par\noindent\rule{\textwidth}{0.4pt}\color{white}
 
 \color{green}
 \subsection{CheckProjectStatusVars}\color{white}
